syntax = "proto3";
package akira.common;

message OperationId {
    string id = 1;
}
